kubeConfigFiles/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "public"
spec:
  tls:
  - hosts:
    - TVOJA-DOMENA
    secretName: flask-tls-cert
  rules:
  - host: TVOJA-DOMENA
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-service
            port:
              number: 80
